# kerygma-profiles

./: AGENTS.md  CLAUDE.md  DISCOVERY.md  GEMINI.md  README.md  pyproject.toml  seed.yaml  value-repos.json
kerygma_profiles/: __init__.py  cli.py  registry.py  secrets.py
profiles/: _default.yaml  amp-lab-media.yaml
tests/: conftest.py  test_registry.py  test_secrets.py
