[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kerygma-profiles"
version = "0.1.0"
description = "Per-project social identity profiles for ORGAN VII Kerygma distribution"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
include = ["kerygma_profiles*"]

[project.scripts]
kerygma-profiles = "kerygma_profiles.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
